# skforecast

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .windsurfrules  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  CSS_ML_FALLBACK_ASSESSMENT.md  LICENSE  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_MULTIVARIATE.md  README.md  REFACTORING_calendar.md  ads.txt  changelog.md  docs_review_errors.md  docs_review_report.md  examples_auto_arima.py  extract_dependences.py  fixed_output.txt  funding.json  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  requirements.txt  requirements_mkdocs.txt  ruff.toml  test_arima_full_params.py  test_auto_arima_integration.py  test_conv1d.py  test_params_methods.py  versions.json
.cursor/rules/: skforecast.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml  skforecast_studio.yml
.github/instructions/: docstrings.instructions.md  testing.instructions.md
.github/prompts/: review-llms-base.prompt.md  review-skill.prompt.md
.github/workflows/: ai-context-check.yml  benchmarks.yml  codecov.yml  latest-deps.yml  unit-tests-latest-deps.yml  unit-tests.yml
0.14.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.14.0/api/: ForecasterDirect.html  ForecasterDirectMultiVariate.html  ForecasterEquivalentDate.html  ForecasterRecursive.html  ForecasterRecursiveMultiSeries.html  ForecasterRnn.html  ForecasterSarimax.html  Sarimax.html  datasets.html  exceptions.html  exceptions.md  feature_selection.html  metrics.html  model_selection.html  plot.html  preprocessing.html  utils.html
0.14.0/authors/: authors.html  authors.md
0.14.0/examples/: examples_english.html  examples_english.md  examples_spanish.html  examples_spanish.md
0.14.0/faq/: cyclical-features-time-series.html  cyclical-features-time-series.ipynb  faq.html  forecasting-time-series-with-missing-values.html  forecasting-time-series-with-missing-values.ipynb  forecasting-with-delayed-historical-data.html  forecasting-with-delayed-historical-data.ipynb  non-negative-predictions.html  non-negative-predictions.ipynb  parallelization-skforecast.html  parallelization-skforecast.ipynb  parameters-search-backetesting-vs-one-step-ahead.html  parameters-search-backtesting-vs-one-step-ahead.html  parameters-search-backtesting-vs-one-step-ahead.ipynb  profiling-skforecast.html  profiling-skforecast.ipynb  table-of-contents.html  table-of-contents.md  time-series-aggregation.html  time-series-aggregation.ipynb
0.14.0/introduction-forecasting/: introduction-forecasting.html  introduction-forecasting.md
0.14.0/quick-start/: forecaster-attributes.html  forecaster-attributes.ipynb  forecaster-parameters.html  forecaster-parameters.md  how-to-install.html  quick-start-skforecast.html  quick-start-skforecast.ipynb
0.14.0/releases/: releases.md  (+1 more)
0.15.0/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.15.1/: 404.html  README.md  index.html  objects.inv  sitemap.xml
0.16.0/: 404.html  index.html  objects.inv  sitemap.xml
0.17.0/: 404.html  index.html  objects.inv  sitemap.xml
0.18.0/: 404.html  index.html  objects.inv  sitemap.xml
0.19.0/: 404.html  index.html  objects.inv  sitemap.xml
0.19.1/: 404.html  index.html  objects.inv  sitemap.xml
0.20.0/: 404.html  index.html  objects.inv  sitemap.xml
0.20.1/: 404.html  index.html  sitemap.xml
0.21.0/: 404.html  index.html  sitemap.xml
0.22.0/: 404.html  index.html  llms.txt  objects.inv  sitemap.xml
0.23.0/: 404.html  index.html  llms.txt  objects.inv  sitemap.xml
asv_benchmarks/: .gitignore  README.md  asv.conf.json
benchmarks/: benchmark.joblib  benchmark_skforecast_direct.ipynb  benchmark_skforecast_direct_LGBMRegressor.ipynb  benchmark_skforecast_recursive.ipynb  benchmark_skforecast_recursive_DummyRegressor.ipynb  benchmark_skforecast_recursive_LGBMRegressor.ipynb  benchmark_skforecast_recursive_dummy_regressor.ipynb  benchmark_skforecast_rnn.ipynb  benchmark_skforecast_versions.ipynb  benchmarking.py  benchmarks_skforecast.ipynb  requirements_benchmarks.txt  run_benchmarks.py
benchmarks_old/: benchmark_skforecast_direct_LGBMRegressor.ipynb  benchmark_skforecast_recursive_DummyRegressor.ipynb
dev/: 00_template copy.ipynb  00_template.ipynb  01_benchmark_versions.ipynb  01_search_link_in_notebooks.ipynb  01_test_execution_time.ipynb  01_test_execution_time_16.ipynb  01_test_execution_time_17.ipynb  404.html  ARIMA_CSS_STATIONARITY_FIX.md  AUTOCORRELATION MODULE.md  Arar.ipynb  BENCHMARK_ACF.py  CHECK_CALENDAR.ipynb  EXPORT_FORECASTER_BACKENDS_PLAN.md  FastOrdinalEncoder.ipynb  ForecasterStats.ipynb  FoundationalModels.ipynb  IMPLEMENTATION-PLAN-BAYESIAN-SEARCH-FOUNDATION.md  OPTIMIZATION_FINDINGS.md  OPTIMIZATION_FINDINGS_MULTISERIES.md  PLAN_FORECASTER_RECURSIVE_INTERVAL_MIGRATION.md  PLAN_FOUNDATIONAL_INPUT_NORMALIZATION.md  PLAN_MOIRAI_ADAPTER.md  PLAN_TABULAR_FOUNDATIONAL.md  PLAN_UNIFY_INTERVAL_QUANTILES.md  PLAN_UNIFY_INTERVAL_QUANTILES_v2.md  REFACTOR_CATBOOST_CATEGORICAL_CAST.md  TESTS_FALLANDO.ipynb  align_ftypes.ipynb  app.py  arar-vs-ararx.ipynb  arima.ipynb  arima.py  arima_aeon.ipynb  arima_auto_arima.ipynb  arima_base.ipynb  arima_bug_nan_pred_interval.ipynb  arima_code_review_fixes.md  arima_kalman_filter_fix.md  arima_refactor_deep_analysis.md  (+127 more)
docs/: README.md  llms-full.txt  llms.txt
latest/: 404.html  index.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
skforecast/: __init__.py
tests/: test_skforecast_version.py
tools/: 00_execute_all_notebooks.py  backtesting_execution_time_for_docs.ipynb  backtesting_user_guide_gifs.ipynb  check_case_in_file_names.py  check_links_docs.ipynb  docs_backtesting_execution_time_user_guide.ipynb  docs_check_links_web.ipynb  drift_detection_stumpy.ipynb  execute_all_notebooks.ipynb  extract_dependences.py  extract_dependencies.py  gif_backtesting_user_guide.ipynb  gif_pupulation_drift.ipynb  gif_shap_values.ipynb  requirements_mkdocs.txt  simulate_categorical_time_series.ipynb
(+2454 files in other folders)
