[project]
name = "skforecast"
version = "0.19.0"
description = "Skforecast is a Python library for time series forecasting using statistical and machine learning models. It works with any estimator compatible with the scikit-learn API, including popular options like LightGBM, XGBoost, CatBoost, Keras, and many others."
readme = "README.md"
authors = [
    {name = "Joaquin Amat Rodrigo", email = "j.amatrodrigo@gmail.com"},
    {name = "Javier Escobar Ortiz", email = "javier.escobar.ortiz@gmail.com"},
]

maintainers = [
    {name = "Joaquin Amat Rodrigo", email = "j.amatrodrigo@gmail.com"},
    {name = "Javier Escobar Ortiz", email = "javier.escobar.ortiz@gmail.com"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

license = "BSD-3-Clause"
license-files = ["LICENSE", "CITATION.cff"]

keywords = [
    "data-science",
    "machine-learning",
    "data-mining",
    "time-series",
    "scikit-learn",
    "forecasting",
    "time-series-analysis",
    "time-series-regression",
    "autoregressive",
    "deep-learning",
    "lightgbm",
    "xgboost",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "tqdm>=4.57",
    "scikit-learn>=1.2",
    "scipy>=1.3.2",
    "optuna>=2.10",
    "joblib>=1.1",
    "numba>=0.59",
    "rich>=13.9"
]
requires-python = ">=3.10"

[project.optional-dependencies]
stats = [
    "statsmodels>=0.12, <0.15"
]

plotting = [
    "matplotlib>=3.3, <3.11",
    "seaborn>=0.11, <0.14",
    "statsmodels>=0.12, <0.15"
]

deeplearning = [
    "keras>=3.0, <4.0",
    "matplotlib>=3.3, <3.11",
]

all = [
    "matplotlib>=3.3, <3.11",
    "seaborn>=0.11, <0.14",
    "statsmodels>=0.12, <0.15",
    "keras>=3.0, <4.0",
    'tensorflow>=2.18, <2.21; python_version < "3.14"',
    "torch>=2.4, <2.10",
]

full = ["skforecast[all]"]

docs = [
    "mike==2.1.3",
    "mkdocs==1.6.1",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-material==9.7.0",
    "mkdocstrings==0.30.1",
    "mkdocstrings-python==1.19.0",
    "notebook==6.5.7",
    "jupyter-contrib-nbextensions==0.7.0",
    "black==25.11.0",
    # Si está el enlace de abajo, al hacer pip install .[docs] falla
    #"https://github.com/ipython-contrib/jupyter_contrib_nbextensions/tarball/master"
]

test = [
    # Testing
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    
    # Stats and plotting
    "statsmodels>=0.12, <0.15",  
    "matplotlib>=3.3, <3.11",
    "seaborn>=0.11, <0.14",
    
    # Other optional dependencies
    "lightgbm>=4.0, <5.0",
    "xgboost>=2.1, <4.0",
    "keras>=3.0, <4.0",
    "torch>=2.4, <2.10",
    "tomli>=2.0",
    "pandas[parquet]>=1.5",
    "aeon>=1.3, <1.4"
]

[project.urls]
Homepage = "https://www.skforecast.org"
Repository = "https://github.com/skforecast/skforecast"
Documentation = "https://www.skforecast.org"
"Release Notes" = "https://skforecast.org/latest/releases/releases"
Download = "https://pypi.org/project/skforecast/#files"
Tracker = "https://github.com/skforecast/skforecast/issues"

[build-system]
requires = ["setuptools>=61", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skforecast*"]
exclude = ["skforecast.*.tests", "skforecast.*.tests.*"]

[tool.pytest.ini_options]
testpaths = ["skforecast"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-vv --tb=short"
# filterwarnings = [
#     "ignore::DeprecationWarning",
#     "ignore::FutureWarning",
# ]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/tests_*/*",
    "*/test_*.py",
    "*/experimental/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
