[project]
name = "skforecast"
version = "0.23.0"
description = "Skforecast is a Python library for time series forecasting using scikit-learn compatible models, statistical methods, and foundation models. It works with any estimator compatible with the scikit-learn API, including popular options like LightGBM, XGBoost, CatBoost, Keras, and many others."
readme = "README.md"
authors = [
    {name = "Joaquin Amat Rodrigo", email = "j.amatrodrigo@gmail.com"},
    {name = "Javier Escobar Ortiz", email = "javier.escobar.ortiz@gmail.com"},
]

maintainers = [
    {name = "Joaquin Amat Rodrigo", email = "j.amatrodrigo@gmail.com"},
    {name = "Javier Escobar Ortiz", email = "javier.escobar.ortiz@gmail.com"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

license = "BSD-3-Clause"
license-files = ["LICENSE", "CITATION.cff"]

keywords = [
    "data-science",
    "machine-learning",
    "data-mining",
    "time-series",
    "scikit-learn",
    "forecasting",
    "time-series-analysis",
    "time-series-regression",
    "autoregressive",
    "deep-learning",
    "lightgbm",
    "xgboost",
    "catboost",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1, <3.0",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "optuna>=4.0",
    "joblib>=1.3",
    "numba>=0.59",
    "rich>=13.9"
]
requires-python = ">=3.10"

[project.optional-dependencies]
stats = [
    "statsmodels>=0.13, <0.15"
]

plotting = [
    "matplotlib>=3.7, <3.11",
    "statsmodels>=0.13, <0.15"
]

deeplearning = [
    "keras>=3.0, <4.0",
    "matplotlib>=3.7, <3.11",
]

all = [
    "matplotlib>=3.7, <3.11",
    "statsmodels>=0.13, <0.15",
    "keras>=3.0, <4.0",
    'tensorflow>=2.18, <2.22; python_version < "3.14"',
    "torch>=2.12.1, <2.13"
]

full = ["skforecast[all]"]

docs = [
    "mike==2.1.3",
    "mkdocs==1.6.1",
    "mkdocs-jupyter==0.26.3",
    "mkdocs-material==9.7.6",
    "mkdocstrings==1.0.4",
    "mkdocstrings-python==2.0.3",
    "black==26.3.1",
]

test = [
    # Testing
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    
    # Stats and plotting
    "statsmodels>=0.13, <0.15",  
    "matplotlib>=3.7, <3.11",
    
    # Other optional dependencies
    "lightgbm>=4.0, <5.0",
    "xgboost>=2.1, <4.0",
    "catboost>=1.2, <2.0",
    "keras>=3.0, <4.0",
    "torch>=2.12.1, <2.13",
    "cloudpickle>=3.0",
    "skops>=0.14",
    "tomli>=2.0",
    "pandas[parquet]>=2.1"
]

[project.urls]
Homepage = "https://www.skforecast.org"
Repository = "https://github.com/skforecast/skforecast"
Documentation = "https://www.skforecast.org"
"Release Notes" = "https://skforecast.org/latest/releases/releases"
"LLM Context" = "https://skforecast.org/latest/llms.txt"
Download = "https://pypi.org/project/skforecast/#files"
Tracker = "https://github.com/skforecast/skforecast/issues"

[build-system]
requires = ["setuptools>=61", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skforecast*"]
exclude = ["skforecast.*.tests", "skforecast.*.tests.*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E221", "E251", "E501", "E241"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
max-line-length = 88

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false

[tool.pytest.ini_options]
testpaths = ["skforecast"]
pythonpath = ["."]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-vv --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
# filterwarnings = [
#     # "ignore::DeprecationWarning",
#     # "ignore::FutureWarning",
#     "ignore::skforecast.exceptions.DataTypeWarning",
#     "ignore::skforecast.exceptions.DataTransformationWarning",
#     "ignore::skforecast.exceptions.ExogenousInterpretationWarning",
#     "ignore::skforecast.exceptions.FeatureOutOfRangeWarning",
#     "ignore::skforecast.exceptions.IgnoredArgumentWarning",
#     "ignore::skforecast.exceptions.InputTypeWarning",
#     "ignore::skforecast.exceptions.LongTrainingWarning",
#     "ignore::skforecast.exceptions.MissingExogWarning",
#     "ignore::skforecast.exceptions.MissingValuesWarning",
#     "ignore::skforecast.exceptions.OneStepAheadValidationWarning",
#     "ignore::skforecast.exceptions.ResidualsUsageWarning",
#     "ignore::skforecast.exceptions.UnknownLevelWarning",
#     "ignore::skforecast.exceptions.SaveLoadSkforecastWarning",
#     "ignore::skforecast.exceptions.SkforecastVersionWarning",
# ]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/tests_*/*",
    "*/test_*.py",
    "*/experimental/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
